@@ -1,6 +1,6 @@
 % File src/library/stats/man/approxfun.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2014 R Core Team
+% Copyright 1995-2017 R Core Team
 % Distributed under GPL 2 or later
 
 \name{approxfun}
@@ -42,16 +42,17 @@ approxfun(x, y = NULL,       method = "linear",
     is used.  Use, e.g., \code{rule = 2:1}, if the left and right side
     extrapolation should differ.}
   \item{f}{for \code{method = "constant"} a number between 0 and 1
-    inclusive, indicating a compromise between left- and 
+    inclusive, indicating a compromise between left- and
     right-continuous step functions. If \code{y0} and \code{y1} are
     the values to the left and right of the point then the value is
     \code{y0} if \code{f == 0}, \code{y1} if \code{f == 1}, and
     \code{ y0*(1-f)+y1*f} for intermediate values. In this way the result is
     right-continuous for \code{f == 0} and left-continuous for \code{f
     == 1}, even for non-finite \code{y} values.}
-  \item{ties}{Handling of tied \code{x} values.  Either a function
+  \item{ties}{handling of tied \code{x} values.  Either a function
     with a single vector argument returning a single number result or
-    the string \code{"ordered"}.}
+    the string \code{"ordered"}; note that the latter is the fastest for
+    large \code{length(x)}.}
 }
 \details{
   The inputs can contain missing values which are deleted, so at least
